--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.0.11 | MIT License | https://tailwindcss.com
+! tailwindcss v3.0.8 | MIT License | https://tailwindcss.com
 *//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
@@ -510,9 +510,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .m-2 {
   margin: 0.5rem !important;
 }
-.-m-2 {
-  margin: -0.5rem !important;
-}
 .mx-2 {
   margin-left: 0.5rem !important;
   margin-right: 0.5rem !important;
@@ -573,17 +570,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: -0.75rem !important;
   margin-right: -0.75rem !important;
 }
-.-mx-1 {
-  margin-left: -0.25rem !important;
-  margin-right: -0.25rem !important;
-}
 .my-2 {
   margin-top: 0.5rem !important;
   margin-bottom: 0.5rem !important;
-}
-.-mx-2 {
-  margin-left: -0.5rem !important;
-  margin-right: -0.5rem !important;
 }
 .mb-2 {
   margin-bottom: 0.5rem !important;
@@ -642,17 +631,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-1 {
   margin-left: 0.25rem !important;
 }
-.mb-1 {
-  margin-bottom: 0.25rem !important;
-}
-.mr-2 {
-  margin-right: 0.5rem !important;
-}
 .mb-6 {
   margin-bottom: 1.5rem !important;
 }
-.mr-1 {
-  margin-right: 0.25rem !important;
+.mr-2 {
+  margin-right: 0.5rem !important;
 }
 .block {
   display: block !important;
@@ -750,17 +733,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-10 {
   height: 2.5rem !important;
 }
-.h-16 {
-  height: 4rem !important;
-}
 .h-full {
   height: 100% !important;
 }
 .h-20 {
   height: 5rem !important;
-}
-.h-12 {
-  height: 3rem !important;
 }
 .min-h-2\/5-screen {
   min-height: 40vh !important;
@@ -864,20 +841,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-6 {
   width: 1.5rem !important;
 }
-.w-full {
-  width: 100% !important;
-}
-.w-1\/2 {
-  width: 50% !important;
-}
-.w-1\/6 {
-  width: 16.666667% !important;
-}
-.w-1\/4 {
-  width: 25% !important;
-}
 .w-10 {
   width: 2.5rem !important;
+}
+.w-full {
+  width: 100% !important;
 }
 .min-w-0 {
   min-width: 0px !important;
@@ -1003,6 +971,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .gap-2 {
   gap: 0.5rem !important;
 }
+.gap-px {
+  gap: 1px !important;
+}
 .divide-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-divide-y-reverse: 0 !important;
   border-top-width: calc(4px * calc(1 - var(--tw-divide-y-reverse))) !important;
@@ -1063,6 +1034,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .rounded-xl {
   border-radius: 0.75rem !important;
+}
+.rounded-lg {
+  border-radius: 0.5rem !important;
 }
 .rounded-t-lg {
   border-top-left-radius: 0.5rem !important;
@@ -1157,15 +1131,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border-b {
   border-bottom-width: 1px !important;
-}
-.border-l-0 {
-  border-left-width: 0px !important;
-}
-.border-t-0 {
-  border-top-width: 0px !important;
-}
-.border-r-0 {
-  border-right-width: 0px !important;
 }
 .border-dashed {
   border-style: dashed !important;
@@ -1276,22 +1241,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-gray-200 {
   --tw-border-opacity: 1 !important;
   border-color: rgb(229 231 235 / var(--tw-border-opacity)) !important;
-}
-.border-red-400 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(248 113 113 / var(--tw-border-opacity)) !important;
-}
-.border-green-600 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(22 163 74 / var(--tw-border-opacity)) !important;
-}
-.border-blue-400 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity)) !important;
-}
-.border-blue-600 {
-  --tw-border-opacity: 1 !important;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity)) !important;
 }
 .bg-blue-600 {
   --tw-bg-opacity: 1 !important;
@@ -1440,45 +1389,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1 !important;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity)) !important;
 }
-.bg-white {
+.bg-gray-300 {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
 }
 .bg-green-500 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity)) !important;
 }
-.bg-gray-300 {
+.bg-white {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
 }
 .bg-gray-200 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity)) !important;
 }
-.bg-blue-400 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(96 165 250 / var(--tw-bg-opacity)) !important;
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity)) !important;
-}
-.bg-green-200 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(187 247 208 / var(--tw-bg-opacity)) !important;
-}
-.bg-blue-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity)) !important;
-}
-.bg-red-500 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity)) !important;
-}
-.bg-blue-600 {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
 }
 .bg-gradient-to-br {
   background-image: linear-gradient(to bottom right, var(--tw-gradient-stops)) !important;
@@ -1635,18 +1564,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
 }
-.py-4 {
-  padding-top: 1rem !important;
-  padding-bottom: 1rem !important;
-}
-.px-1 {
-  padding-left: 0.25rem !important;
-  padding-right: 0.25rem !important;
-}
-.py-1 {
-  padding-top: 0.25rem !important;
-  padding-bottom: 0.25rem !important;
-}
 .px-2 {
   padding-left: 0.5rem !important;
   padding-right: 0.5rem !important;
@@ -1705,12 +1622,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .pl-2 {
   padding-left: 0.5rem !important;
 }
-.pt-2 {
-  padding-top: 0.5rem !important;
-}
-.pb-1 {
-  padding-bottom: 0.25rem !important;
-}
 .text-left {
   text-align: left !important;
 }
@@ -1763,21 +1674,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 0.875rem !important;
   line-height: 1.25rem !important;
 }
-.text-xl {
-  font-size: 1.25rem !important;
-  line-height: 1.75rem !important;
-}
-.text-2xl {
-  font-size: 1.5rem !important;
-  line-height: 2rem !important;
+.text-3xl {
+  font-size: 1.875rem !important;
+  line-height: 2.25rem !important;
 }
 .text-lg {
   font-size: 1.125rem !important;
   line-height: 1.75rem !important;
-}
-.text-3xl {
-  font-size: 1.875rem !important;
-  line-height: 2.25rem !important;
 }
 .text-6xl {
   font-size: 3.75rem !important;
@@ -1902,21 +1805,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1 !important;
   color: rgb(34 197 94 / var(--tw-text-opacity)) !important;
 }
-.text-gray-700 {
+.text-gray-600 {
   --tw-text-opacity: 1 !important;
-  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
+  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
 }
 .text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
 }
-.text-gray-600 {
+.text-gray-700 {
   --tw-text-opacity: 1 !important;
-  color: rgb(75 85 99 / var(--tw-text-opacity)) !important;
-}
-.text-green-600 {
-  --tw-text-opacity: 1 !important;
-  color: rgb(22 163 74 / var(--tw-text-opacity)) !important;
+  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
 }
 .text-gray-500 {
   --tw-text-opacity: 1 !important;
@@ -1958,11 +1857,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1) !important;
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color) !important;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
-}
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color) !important;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow) !important;
 }
 .outline-none {
@@ -13391,26 +13285,6 @@ body {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity)) !important;
 }
-.hover\:bg-blue-100:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(219 234 254 / var(--tw-bg-opacity)) !important;
-}
-.hover\:bg-green-600:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
-}
-.hover\:bg-blue-600:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(37 99 235 / var(--tw-bg-opacity)) !important;
-}
-.hover\:bg-indigo-100:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(224 231 255 / var(--tw-bg-opacity)) !important;
-}
-.hover\:bg-red-600:hover {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity)) !important;
-}
 .hover\:bg-blue-400:hover {
   --tw-bg-opacity: 1 !important;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity)) !important;
@@ -13458,22 +13332,6 @@ body {
 .hover\:text-green-700:hover {
   --tw-text-opacity: 1 !important;
   color: rgb(21 128 61 / var(--tw-text-opacity)) !important;
-}
-.hover\:text-red-400:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(248 113 113 / var(--tw-text-opacity)) !important;
-}
-.hover\:text-blue-600:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(37 99 235 / var(--tw-text-opacity)) !important;
-}
-.hover\:text-green-700:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(21 128 61 / var(--tw-text-opacity)) !important;
-}
-.hover\:text-blue-400:hover {
-  --tw-text-opacity: 1 !important;
-  color: rgb(96 165 250 / var(--tw-text-opacity)) !important;
 }
 .hover\:underline:hover {
   -webkit-text-decoration-line: underline !important;
@@ -13579,14 +13437,6 @@ body {
 
   .md\:inline-block {
     display: inline-block !important;
-  }
-
-  .md\:inline-block {
-    display: inline-block !important;
-  }
-
-  .md\:inline {
-    display: inline !important;
   }
 
   .md\:inline {
@@ -13709,14 +13559,6 @@ body {
     width: 18rem !important;
   }
 
-  .md\:w-auto {
-    width: auto !important;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667% !important;
-  }
-
   .md\:flex-auto {
     flex: 1 1 auto !important;
   }
@@ -13777,14 +13619,6 @@ body {
 
   .lg\:flex {
     display: flex !important;
-  }
-
-  .lg\:flex {
-    display: flex !important;
-  }
-
-  .lg\:hidden {
-    display: none !important;
   }
 
   .lg\:hidden {
@@ -13903,18 +13737,6 @@ body {
     width: 16.666667% !important;
   }
 
-  .lg\:w-4\/6 {
-    width: 66.666667% !important;
-  }
-
-  .lg\:w-1\/6 {
-    width: 16.666667% !important;
-  }
-
-  .lg\:w-2\/5 {
-    width: 40% !important;
-  }
-
   .lg\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr)) !important;
   }
@@ -13953,16 +13775,6 @@ body {
   .lg\:text-lg {
     font-size: 1.125rem !important;
     line-height: 1.75rem !important;
-  }
-
-  .lg\:text-xl {
-    font-size: 1.25rem !important;
-    line-height: 1.75rem !important;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem !important;
-    line-height: 2rem !important;
   }
 
   .lg\:text-xl {
@@ -14015,10 +13827,6 @@ body {
 
   .xl\:w-2\/4 {
     width: 50% !important;
-  }
-
-  .xl\:w-1\/4 {
-    width: 25% !important;
   }
 
   .xl\:grid-cols-6 {
